--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         uses: ./build
         with:
           filename: 'src/ml1/ml1.tex'
-          out_dir: 'out/ml1'
+          out_dir: 'out/ml1/'
           
       - name: Commit compiled pdf files
         if: success()
